update description for `HTTP_WORKERS` with new algorithm

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1317,7 +1317,19 @@ LISTEN_SCHEME=http
 # rauthy behind a reverse proxy. In case of a non-standard port (80/443), you need to add the port to the PUB_URL
 PUB_URL=localhost:8080
 
-# default value: number of available physical cores
+# Limits the amount of HTTP worker threads. This value
+# heavily impacts memory usage, even in idle. The default
+# values are:
+# - less than 4 CPU cores -> 1
+# - 4+ cores -> max(2, cores - MAX_HASH_THREADS - reserve)
+#   where `reserve` is 2 when `HIQLITE=true` and 1 otherwise.
+#
+# CAUTION: If you run your instance on a big underlying host,
+# you almost always want to manually set an appropriate
+# value. Rauthy can only see all available cores and not any
+# possibly set container limits. This means if it runs inside
+# a container on something like a a 96 core host, Rauthy will
+# by default spawn very many threads.
 HTTP_WORKERS=1
 
 # When rauthy is running behind a reverse proxy, set to true (default: false)
@@ -1342,7 +1354,7 @@ ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: false
-METRICS_ENABLE=true
+#METRICS_ENABLE=true
 
 # The IP address to listen on for the /metrics endpoint.
 # You do not want to expose your metrics on a publicly reachable endpoint!
@@ -1358,7 +1370,7 @@ METRICS_ENABLE=true
 # It it then reachable via:
 # http://METRICS_ADDR:METRICS_PORT/docs/v1/swagger-ui/
 # (default: true)
-#SWAGGER_UI_INTERNAL=true
+SWAGGER_UI_INTERNAL=true
 
 # If the Swagger UI should be served externally as well. This makes the link in the Admin UI work.
 #
@@ -1366,7 +1378,7 @@ METRICS_ENABLE=true
 # Rauthy is open source, which means anyone could just download it and see on their own,
 # but it may be a security concern to just expose less information.
 # (default: false)
-SWAGGER_UI_EXTERNAL=true
+#SWAGGER_UI_EXTERNAL=true
 
 # The interval in seconds in which keep-alives should be sent to SSE clients.
 # Depending on your network setup, proxy timeouts, ..., you may adjust this value to fit your needs.
