--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -6,6 +6,7 @@ authors.workspace = true
 license.workspace = true
 
 [features]
+default = ["jemalloc"]
 jemalloc = ["dep:tikv-jemallocator"]
 
 [dependencies]
