push `SwaggerUI` into static memory and manually serve it

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1354,17 +1354,28 @@ ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: false
-#METRICS_ENABLE=true
+METRICS_ENABLE=true
 
 # The IP address to listen on for the /metrics endpoint.
 # You do not want to expose your metrics on a publicly reachable endpoint!
 # default: 0.0.0.0
 #METRICS_ADDR=0.0.0.0
 
-# The post to listen on for the /metrics endpoint.
+# The port to listen on for the /metrics endpoint.
 # You do not want to expose your metrics on a publicly reachable endpoint!
 # default: 9090
 #METRICS_PORT=9090
+
+# Can be set to `true` to enable the Swagger UI.
+# This will consume ~13mb of additional memory.
+# default: false
+SWAGGER_UI_ENABLE=true
+
+# Can be set to `true` to make the Swagger UI publicly
+# available. By default, you can only access it with a
+# valid `rauthy_admin` session.
+# default: false
+SWAGGER_UI_PUBLIC=false
 
 # If the Swagger UI should be served together with the /metrics route on the internal server.
 # It it then reachable via:
