--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -32,4 +32,5 @@ time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 utoipa = { workspace = true }
+utoipa-swagger-ui = { workspace = true }
 validator = { workspace = true }
