find a way to parse from `toml` while keeping the old env vars

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,7 @@ strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
 tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
+toml = "0.8.22"
 tracing = { version = "0.1", features = ["attributes"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing"] }
 tokio = { version = "1", features = ["full"] }
