--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -61,6 +61,7 @@ spow = { workspace = true }
 svg-hush = { workspace = true }
 strum = { workspace = true }
 time = { workspace = true }
+toml = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 utoipa = { workspace = true }
