--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1519,8 +1519,8 @@ RP_ID=localhost
 RP_ORIGIN=http://localhost:5173
 
 # Non critical RP Name
-# Has no security properties and may be changed without issues (default: Rauthy Webauthn)
-RP_NAME='Rauthy Webauthn'
+# Has no security properties and may be changed without issues (default: Rauthy IAM)
+RP_NAME='Rauthy IAM'
 
 # The Cache lifetime in seconds for Webauthn requests. Within this time, a webauthn request must have been validated.
 # (default: 60)
