update toml docs + create an env var -> toml lookup table

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1443,13 +1443,13 @@ TLS_KEY=tls/key.pem
 
 # If given, these keys / certificates will be used to establish
 # TLS connections between nodes.
-HQL_TLS_RAFT_KEY=tls/key.pem
-HQL_TLS_RAFT_CERT=tls/cert-chain.pem
-HQL_TLS_RAFT_DANGER_TLS_NO_VERIFY=true
-
-HQL_TLS_API_KEY=tls/key.pem
-HQL_TLS_API_CERT=tls/cert-chain.pem
-HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
+#HQL_TLS_RAFT_KEY=tls/key.pem
+#HQL_TLS_RAFT_CERT=tls/cert-chain.pem
+#HQL_TLS_RAFT_DANGER_TLS_NO_VERIFY=true
+#
+#HQL_TLS_API_KEY=tls/key.pem
+#HQL_TLS_API_CERT=tls/cert-chain.pem
+#HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
 
 #####################################
 ######### USER PICTURES #############
