--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.30.0-20250531"
+version = "0.30.0-20250609-2"
 edition = "2024"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -16,7 +16,6 @@ panic = "abort"
 codegen-units = 1
 lto = true
 strip = true
-panic = "abort"
 
 [profile.profiling]
 inherits = "release"
