--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ strip = false
 
 [patch.crates-io]
 #hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
-hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
-hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
+#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
+#hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
 
 [workspace.dependencies]
 accept-language = "3"
@@ -57,10 +57,10 @@ futures = "0.3"
 futures-util = "0.3"
 gethostname = "1"
 hex = { version = "0.4", features = ["serde"] }
-hiqlite = { version = "0.7.0-20250529", features = [
+hiqlite = { version = "0.7.0", features = [
     "cache", "counters", "dashboard", "listen_notify_local", "migrate-rocksdb"
 ] }
-hiqlite-macros = { version = "0.7.0-20250529" }
+hiqlite-macros = { version = "0.7.0" }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
