--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.30.1-20250612-1"
+version = "0.30.1"
 edition = "2024"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -16,6 +16,7 @@ panic = "abort"
 codegen-units = 1
 lto = true
 strip = true
+panic = "abort"
 
 [profile.profiling]
 inherits = "release"
@@ -57,10 +58,10 @@ futures = "0.3"
 futures-util = "0.3"
 gethostname = "1"
 hex = { version = "0.4", features = ["serde"] }
-hiqlite = { version = "0.7.0", features = [
+hiqlite = { version = "0.7", features = [
     "cache", "counters", "dashboard", "listen_notify_local", "migrate-rocksdb"
 ] }
-hiqlite-macros = { version = "0.7.0" }
+hiqlite-macros = { version = "0.7" }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
@@ -74,7 +75,6 @@ libflate = "2.1.0"
 mime = "0.3.17"
 mime_guess = "2"
 num_cpus = "1"
-once_cell = "1.19.0"
 openssl = { version = "0.10.72", features = ["vendored"] }
 openssl-sys = { version = "0.9.105", features = ["vendored"] }
 oxiri = "0.2.2"
