--- a/assets/nginx/conf.d/default.conf
+++ b/assets/nginx/conf.d/default.conf
@@ -33,7 +33,15 @@ server {
         proxy_set_header Connection "";
         proxy_pass_request_body off;
 
-        # expects a properly configured client with the id `test`
+        # Expects a properly configured client with the id `test`
+        #
+        # NEVER set `danger_cookie_insecure=true` in production!
+        # This is only used for testing purposes!
+        #
+        # Apart from `danger_cookie_insecure`, you can optionally pass in
+        # `redirect_state` which will change the default `401` state if
+        # validation failed and nginx should redirect. nginx can handle this
+        # dynamically, but it exists for compatibility.
         proxy_pass http://rauthy/auth/v1/clients/test/forward_auth?danger_cookie_insecure=true;
     }
 
