--- a/config.toml
+++ b/config.toml
@@ -1691,10 +1691,7 @@ proxy_mode = false
 #
 # default: []
 # overwritten by: TRUSTED_PROXIES - single String, \n separated values
-trusted_proxies = [
-    '127.0.0.1/32',
-    '192.168.14.0/24'
-]
+trusted_proxies = ['127.0.0.1/32']
 
 # To bring support for applications using deep-linking, you
 # can set custom URL schemes to be accepted when present in
