impl `CertifiedKeysWatched` for potential SNI based dynamic resolving

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ serde_urlencoded = "0.7.1"
 spow = { version = "0.6", features = ["server"] }
 strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
+thiserror = "2"
 tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
 toml = "0.8.22"
