--- a/config.toml
+++ b/config.toml
@@ -200,6 +200,14 @@ token_len_limit = 4096
 # overwritten by: WHOAMI_HEADERS
 whoami_headers = true
 
+[atproto]
+# Set to `true` to enable the ATProto provider. If the public URL is
+# 'localhost' it should be changed to '127.0.0.1', if `dev_mode = true`
+# this also applies for the `provider_callback_url`.
+#
+# default: false
+# enable = false
+
 [auth_headers]
 # You can enable authn/authz headers which would be added to the
 # response of the `/auth/v1/oidc/forward_auth` endpoint. When set to
