--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -19,6 +19,7 @@ accept-language = { workspace = true }
 actix-multipart = { workspace = true }
 actix-web = { workspace = true }
 actix-web-lab = { workspace = true }
+arc-swap = { workspace = true }
 argon2 = { workspace = true }
 askama = { workspace = true }
 async-trait = { workspace = true }
@@ -30,7 +31,9 @@ chrono = { workspace = true }
 cryptr = { workspace = true }
 dotenvy = { workspace = true }
 ed25519-compact = { workspace = true }
+flate2 = { workspace = true }
 flume = { workspace = true }
+futures = { workspace = true }
 futures-util = { workspace = true }
 hex = { workspace = true }
 hickory-resolver = { workspace = true }
@@ -41,6 +44,7 @@ hmac-sha512 = { workspace = true }
 image = { workspace = true }
 itertools = { workspace = true }
 lettre = { workspace = true }
+maxminddb = { workspace = true }
 mime = { workspace = true }
 num_cpus = { workspace = true }
 openssl = { workspace = true }
@@ -64,6 +68,7 @@ serde_rusqlite = { workspace = true }
 spow = { workspace = true }
 svg-hush = { workspace = true }
 strum = { workspace = true }
+tar = { workspace = true }
 time = { workspace = true }
 toml = { workspace = true }
 tracing = { workspace = true }
