make the GB type for Maxmind configurable

--- a/config.toml
+++ b/config.toml
@@ -1325,7 +1325,7 @@ block_unknown = false
 #
 # default: not set
 # overwritten by: GEO_COUNTRY_HEADER
-country_header = 'CF-IPCountry'
+#country_header = 'CF-IPCountry'
 
 # You can black- or whitelist countries, if you have a configured
 # and working Geolocation, either via `country_header` or a
@@ -1344,14 +1344,19 @@ country_header = 'CF-IPCountry'
 # disabled.
 #
 # default: not set
-country_list_type = 'whitelist'
+#country_list_type = 'whitelist'
 # default: not set
-country_list = ['DE']
+#country_list = []
 
 # If you don't have a header with a country code, you can
 # also provide a Maxmind account. Rauthy will then download
 # the 'GeoLite2 Country' database regularly and use it for
 # geolocating IPs.
+#
+# The GeoLite databases from Maxmind are free and published
+# under the Creative Commons License. You can also provide
+# an Enterprise database, which will have more accurate data.
+# Check the `maxind_db_type` below.
 #
 # default: not set
 # overwritten by: GEO_MAXMIND_ACC_ID
@@ -1365,6 +1370,26 @@ country_list = ['DE']
 # default: 'data'
 # overwritten by: GEO_MAXMIND_DIR
 #maxmind_db_dir = 'data'
+
+# By default, the `GeoLite2-Country` database from Maxmind is
+# being used. The IP Geolocation databases are loaded fully into
+# memory at startup to speedup lookups. The size therefore makes
+# a big difference, not only for lookup speed, but also in terms
+# of memory usage. The Country DB adds ~10MB of memory overhead,
+# while the City DB is around 65MB.
+#
+# Possible Values (case-sensitive):
+# - GeoLite2-Country
+# - GeoLite2-City
+#
+# If you have access to paid Maxmind databases, you can add the
+# db_type in a way that it resolves to a valid download link.
+# The link will be created with the following template:
+# `https://download.maxmind.com/geoip/databases/{maxind_db_type}/download?suffix=tar.gz`
+#
+# default: 'GeoLite2-Country'
+# overwritten by: GEO_MAXMIND_DB_TYPE
+#maxind_db_type = 'GeoLite2-Country'
 
 [hashing]
 # Argon2ID hashing parameters. Take a look at the documentation
